--- a/src/Mod/Draft/Resources/ui/userprefs-import1.ui
+++ b/src/Mod/Draft/Resources/ui/userprefs-import1.ui
@@ -287,6 +287,26 @@
        </layout>
       </item>
       <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="Gui::PrefCheckBox" name="checkBox">
+          <property name="toolTip">
+           <string>If this is checked, DXF layers will be imported as Draft layers</string>
+          </property>
+          <property name="text">
+           <string>Use Draft Layers</string>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>dxfUseDraftLayers</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/Draft</cstring>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_12">
         <item>
          <widget class="Gui::PrefCheckBox" name="gui::prefcheckbox_10">
