+ Replace 'Platform' with 'Program type' to avoid confusion with the OS platform type

--- a/src/Gui/AboutApplication.ui
+++ b/src/Gui/AboutApplication.ui
@@ -118,7 +118,7 @@
        <item row="4" column="0">
         <widget class="QLabel" name="labelPlatform">
          <property name="text">
-          <string>Platform</string>
+          <string>Program type</string>
          </property>
         </widget>
        </item>
