--- a/src/Mod/Arch/Resources/ui/archprefs-import.ui
+++ b/src/Mod/Arch/Resources/ui/archprefs-import.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>531</width>
-    <height>548</height>
+    <width>553</width>
+    <height>612</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -347,6 +347,35 @@
           </property>
           <property name="prefEntry" stdset="0">
            <cstring>ColladaScalingFactor</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/Arch</cstring>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBox_4">
+     <property name="title">
+      <string>WebGL export</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_15">
+        <item>
+         <widget class="Gui::PrefCheckBox" name="checkBox_5">
+          <property name="toolTip">
+           <string>If this is checked, wires will be discretized, which results in more accurate curves, but heavier files.</string>
+          </property>
+          <property name="text">
+           <string>Discretize wires</string>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>webGlDiscretizeCurves</cstring>
           </property>
           <property name="prefPath" stdset="0">
            <cstring>Mod/Arch</cstring>
