--- a/src/Mod/Draft/Resources/ui/userprefs-visual.ui
+++ b/src/Mod/Draft/Resources/ui/userprefs-visual.ui
@@ -440,6 +440,9 @@ such as &quot;Arial:Bold&quot;</string>
           <property name="toolTip">
            <string>Default height for texts and dimensions</string>
           </property>
+          <property name="maximum">
+           <double>999.990000000000009</double>
+          </property>
           <property name="value">
            <double>0.200000000000000</double>
           </property>
@@ -681,6 +684,26 @@ such as &quot;Arial:Bold&quot;</string>
           </property>
           <property name="prefEntry" stdset="0">
            <cstring>dimspacing</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/Draft</cstring>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <item>
+         <widget class="Gui::PrefCheckBox" name="checkBox">
+          <property name="text">
+           <string>Show the unit suffix in dimensions</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>showUnit</cstring>
           </property>
           <property name="prefPath" stdset="0">
            <cstring>Mod/Draft</cstring>
