+ optimize creation of hexagonal sketch profile, add icon

--- a/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
+++ b/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
@@ -70,6 +70,7 @@
         <file>icons/Sketcher_Sketch.svg</file>
         <file>icons/Sketcher_ViewSketch.svg</file>
         <file>icons/Sketcher_AlterConstruction.svg</file>
+        <file>icons/Sketcher_ProfilesHexagon1.svg</file>
         <file>translations/Sketcher_af.qm</file>
         <file>translations/Sketcher_de.qm</file>
         <file>translations/Sketcher_fi.qm</file>
