+ fixes #0001562: Add units to Fillet and Chamfer in PartDesign

--- a/src/Mod/PartDesign/Gui/TaskFilletParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskFilletParameters.ui
@@ -24,19 +24,19 @@
       </widget>
      </item>
      <item>
-      <widget class="QDoubleSpinBox" name="doubleSpinBox">
-       <property name="minimum">
-        <double>0.000000000000000</double>
-       </property>
-       <property name="maximum">
-        <double>999999999.000000000000000</double>
-       </property>
-      </widget>
+      <widget class="Gui::InputField" name="filletRadius"/>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>Gui::InputField</class>
+   <extends>QLineEdit</extends>
+   <header>Gui/InputField.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
