+ split create/edit sketch command into two commands

--- a/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
+++ b/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
@@ -64,6 +64,7 @@
         <file>icons/Sketcher_DraftLine.svg</file>
         <file>icons/Sketcher_Trimming.svg</file>
         <file>icons/Sketcher_External.svg</file>
+        <file>icons/Sketcher_EditSketch.svg</file>
         <file>icons/Sketcher_LeaveSketch.svg</file>
         <file>icons/Sketcher_MapSketch.svg</file>
         <file>icons/Sketcher_NewSketch.svg</file>
