--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -44,6 +44,7 @@
         <file>icons/IFC.svg</file>
         <file>icons/Arch_StructuralSystem.svg</file>
         <file>icons/Arch_StructuralSystem_Tree.svg</file>
+        <file>icons/Arch_ToggleIfcBrepFlag.svg</file>
         <file>ui/archprefs-base.ui</file>
         <file>ui/archprefs-defaults.ui</file>
         <file>ui/archprefs-import.ui</file>
